# knowledge-graph

./: .gitignore  README.md
MVP/: Makefile  README.md  pyproject.toml
MVP/server/: __main__.py
MVP/src/: add-data.py  application.py  interfaces.py  result.py
MVP/src/chunk_storage/: sqlite_chunk_storage.py
MVP/src/file_loader/: py_pdf_file_loader.py
MVP/src/file_splitter/: text_file_splitter.py
MVP/src/file_storage/: local_file_storage.py
MVP/src/misc/: constants.py  utils.py
MVP/src/playgrounds/: file_adder.py  models.py  pdf_playground.py  plain_text_playground.py  utils.py
MVP/src/vector_db/: in_memory_vector_db.py
MVP/view/: index.html
documentation/: about-the-problem.md  our-solution-strategy.md  possible-user-stories.md
